welcome.lessons.welcome.bat.bool2.LastDigit2.scala.error
lastDigit:2: error: type mismatch;
 found   : Unit
 required: Boolean
  if ((a%10==b%10)||(a%10==c%10)||(b%10==c%10)){
  ^